// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListSelectorDialog rendering renders expected elements 1`] = `
<Dialog
  size="sm"
  stretch={true}
  title="Test title"
>
  <div>
    <div
      aria-live="polite"
      className="sr-only"
    />
    <ListSelector
      allItems={
        [
          "foo",
          "bar",
          "baz",
          "oof",
        ]
      }
      allItemsRemovedText="Test all items removed."
      emptyText="Test empty."
      getLabel={[Function]}
      id="listSelector"
      items={
        [
          "foo",
          "bar",
        ]
      }
      onChange={[MockFunction]}
    />
  </div>
  <div>
    <Button
      id="closeDialogBtn"
      text="Cancel"
    />
    <Button
      disabled={false}
      id="saveItemsBtn"
      onClick={[Function]}
      text="Test save"
      type="primary"
    />
  </div>
</Dialog>
`;

exports[`ListSelectorDialog rendering renders expected elements when defaultItems is set 1`] = `
<Dialog
  size="sm"
  stretch={true}
  title="Test title"
>
  <div>
    <div
      aria-live="polite"
      className="sr-only"
    />
    <ListSelector
      allItems={
        [
          "foo",
          "bar",
          "baz",
          "oof",
        ]
      }
      emptyText="Test empty."
      getLabel={[Function]}
      id="listSelector"
      items={
        [
          "foo",
          "bar",
        ]
      }
      onChange={[MockFunction]}
    />
    <div
      className="ListSelectorDialog__buttons"
    >
      <Button
        onClick={[Function]}
        size="small"
        text="Restore defaults"
      />
    </div>
  </div>
  <div>
    <Button
      id="closeDialogBtn"
      text="Cancel"
    />
    <Button
      disabled={false}
      id="saveItemsBtn"
      onClick={[Function]}
      text="Test save"
      type="primary"
    />
  </div>
</Dialog>
`;
